--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 imapclient==2.3.1
 requests==2.26.0
 beautifulsoup4==4.9.3
-anthropic==0.34.0
+anthropic==0.36.0
 pydantic==2.9.2
+fastapi==0.115.2
+uvicorn==0.22.0
+openai==1.51.2
+supervisor==4.2.5
