--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ requests==2.26.0
 beautifulsoup4>=4.12.0
 openai>=1.3.0
 python-dateutil>=2.8.2
-ell>=0.1.0
 pydantic==2.9.2
 kafka-python
+tabulate>=0.9.0
