--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 # Gmail Categorizer Environment Variables
 
-# Your Gmail email address
-GMAIL_EMAIL=your.email@gmail.com
+# Gmail credentials
+GMAIL_EMAIL=your-email@gmail.com
+GMAIL_PASSWORD=your-app-password
 
-# Your Gmail password or app-specific password
-GMAIL_PASSWORD=your_password_or_app_specific_password
+# Control API credentials
+CONTROL_API_TOKEN=your-api-token
 
-# Note: Replace the values above with your actual Gmail credentials
+# Optional settings
+HOURS=2  # Number of hours to look back for emails
+
+# Note: Replace the values above with your actual Gmail credentials and other settings
 # Do not commit the actual .env file with real credentials to version control
