CHORE code review feedback

--- a/.github/workflows/presubmit-review.yml
+++ b/.github/workflows/presubmit-review.yml
@@ -8,11 +8,17 @@ permissions:
 on:
   pull_request:
   pull_request_review_comment:
-    types: [created]
+    types: [opened, synchronize]
 
 jobs:
   Review:
     runs-on: ubuntu-latest
+      - name: Check required secrets
+        run: |
+          if [ -z "${{ secrets.LLM_API_KEY }}" ]; then
+            echo "Error: LLM_API_KEY secret is not configured"
+            exit 1
+          fi
     steps:
       - uses: presubmit/ai-reviewer@latest
         env:
