FEAT always run ai-reviewer

--- a/.github/workflows/presubmit-review.yml
+++ b/.github/workflows/presubmit-review.yml
@@ -6,23 +6,26 @@ permissions:
   issues: write
 
 on:
+  push:
+    branches:
+      - '**'
   pull_request:
+    types: [opened, synchronize, reopened]
   pull_request_review_comment:
-    types: [opened, synchronize]
+    types: [created, edited]
 
 jobs:
   Review:
     runs-on: ubuntu-latest
+    steps:
       - name: Check required secrets
         run: |
           if [ -z "${{ secrets.LLM_API_KEY }}" ]; then
             echo "Error: LLM_API_KEY secret is not configured"
             exit 1
           fi
-    steps:
       - uses: presubmit/ai-reviewer@latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           LLM_API_KEY: ${{ secrets.LLM_API_KEY }}
           LLM_MODEL: "claude-3-5-sonnet-20241022"
-
