got tests working

--- a/.github/workflows/presubmit-review.yml
+++ b/.github/workflows/presubmit-review.yml
@@ -17,7 +17,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  Review:
+  review:
     runs-on: ubuntu-latest
     steps:
       - name: Check required secrets
