--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ HOURS=2  # Number of hours to look back for emails
 
 # Note: Replace the values above with your actual Gmail credentials and other settings
 # Do not commit the actual .env file with real credentials to version control
+
+# Mailtrap API credentials (for API-based email sending)
+MAILTRAP_KEY=your_key
+
+# SMTP credentials for mailfrom.dev
+SMTP_USERNAME=your-smtp-username
+SMTP_PASSWORD=your-smtp-password
+
