--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,14 @@ beautifulsoup4>=4.12.0
 openai>=1.3.0
 python-dateutil>=2.8.2
 pydantic==2.9.2
+email-validator>=2.0.0
 kafka-python
 tabulate>=0.9.0
 requests-mock>=1.11.0
+mailtrap>=2.0.0
 numpy>=1.21.0
 scipy>=1.7.0
+
+# Optional email provider dependencies
+# Uncomment the providers you want to use:
+# mailtrap>=2.0.0  # For Mailtrap email provider
