FEAT Dockerized service

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ MAILTRAP_KEY=your_key
 SMTP_USERNAME=your-smtp-username
 SMTP_PASSWORD=your-smtp-password
 
+# Email summary settings
+ENABLE_SUMMARIES=true  # Set to false to disable summary reports
+SUMMARY_RECIPIENT_EMAIL=your-email@gmail.com  # Who receives the summary reports
+
