--- a/Dockerfile.service
+++ b/Dockerfile.service
@@ -17,7 +17,10 @@ RUN pip install -U "ell-ai[all]"
 COPY gmail_fetcher.py .
 COPY gmail_fetcher_service.py .
 COPY domain_service.py .
+COPY send_summary_report.py .
 COPY models/ ./models/
+COPY services/ ./services/
+COPY email_providers/ ./email_providers/
 
 # Set environment variables
 ENV GMAIL_EMAIL=""
@@ -26,6 +29,10 @@ ENV CONTROL_API_TOKEN=""
 ENV HOURS="2"
 ENV SCAN_INTERVAL="2"
 ENV PYTHONUNBUFFERED=1
+ENV ENABLE_SUMMARIES="true"
+ENV SUMMARY_RECIPIENT_EMAIL=""
+ENV SMTP_USERNAME=""
+ENV SMTP_PASSWORD=""
 
 # Make the service script executable
 RUN chmod +x gmail_fetcher_service.py
