FIX Ollama host configurations

--- a/Dockerfile.service
+++ b/Dockerfile.service
@@ -33,6 +33,8 @@ ENV ENABLE_SUMMARIES="true"
 ENV SUMMARY_RECIPIENT_EMAIL=""
 ENV SMTP_USERNAME=""
 ENV SMTP_PASSWORD=""
+ENV OLLAMA_HOST_PRIMARY="10.1.1.247:11434"
+ENV OLLAMA_HOST_SECONDARY="10.1.1.212:11434"
 
 # Make the service script executable
 RUN chmod +x gmail_fetcher_service.py
