--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,10 @@ jinja2>=3.1.2
 matplotlib>=3.7.0
 seaborn>=0.12.0
 
+# API dependencies
+fastapi>=0.104.0
+uvicorn>=0.24.0
+
 # Optional email provider dependencies
 # Uncomment the providers you want to use:
 # mailtrap>=2.0.0  # For Mailtrap email provider
