FEAT multiple LLM provider support

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,149 +2,134 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug gmail_fetcher.py",
+            "name": "Gmail Fetcher - Debug",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/gmail_fetcher.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
             "args": [
-                "--base-url", "10.1.1.247:11434",
-                "--hours", "2"
+                "--hours",
+                "1"
             ],
-            "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
-            "envFile": "${workspaceFolder}/.env",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}",
-                "PYTHONUNBUFFERED": "1"
-            },
-            "stopOnEntry": false,
             "justMyCode": false,
-            "subProcess": true,
-            "redirectOutput": true,
-            "showReturnValue": true,
-            "purpose": ["debug-in-terminal"]
+            "stopOnEntry": false
         },
         {
-            "name": "Debug gmail_fetcher.py (Custom Args)",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/gmail_fetcher.py",
-            "args": [],
-            "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}",
-            "envFile": "${workspaceFolder}/.env",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}",
-                "PYTHONUNBUFFERED": "1"
-            },
-            "stopOnEntry": false,
-            "justMyCode": false,
-            "subProcess": true,
-            "redirectOutput": true,
-            "showReturnValue": true,
-            "purpose": ["debug-in-terminal"]
-        },
-        {
-            "name": "Debug gmail_fetcher_service.py",
+            "name": "Gmail Fetcher Service - Debug",
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/gmail_fetcher_service.py",
-            "args": [],
             "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}",
             "envFile": "${workspaceFolder}/.env",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}",
-                "PYTHONUNBUFFERED": "1"
-            },
-            "stopOnEntry": false,
+            "cwd": "${workspaceFolder}",
             "justMyCode": false,
-            "subProcess": true,
-            "redirectOutput": true,
-            "showReturnValue": true,
-            "purpose": ["debug-in-terminal"]
+            "stopOnEntry": false
         },
         {
-            "name": "Debug Current File",
+            "name": "Web Dashboard - Debug",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/web_dashboard.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "cwd": "${workspaceFolder}",
+            "justMyCode": false,
+            "stopOnEntry": false,
+            "args": [
+                "--port",
+                "8080",
+                "--debug"
+            ]
+        },
+        {
+            "name": "API Service - Debug",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/api_service.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "cwd": "${workspaceFolder}",
+            "justMyCode": false,
+            "stopOnEntry": false
+        },
+        {
+            "name": "Send Summary Report - Debug",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/send_summary_report.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "cwd": "${workspaceFolder}",
+            "justMyCode": false,
+            "stopOnEntry": false
+        },
+        {
+            "name": "Email Scanner Producer - Debug",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/email_scanner_producer.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "cwd": "${workspaceFolder}",
+            "justMyCode": false,
+            "stopOnEntry": false
+        },
+        {
+            "name": "Email Scanner Consumer - Debug",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/email_scanner_consumer.py",
+            "console": "integratedTerminal",
+            "envFile": "${workspaceFolder}/.env",
+            "cwd": "${workspaceFolder}",
+            "justMyCode": false,
+            "stopOnEntry": false
+        },
+        {
+            "name": "Current File - Debug",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}",
             "envFile": "${workspaceFolder}/.env",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}",
-                "PYTHONUNBUFFERED": "1"
-            },
-            "stopOnEntry": false,
+            "cwd": "${workspaceFolder}",
             "justMyCode": false,
-            "subProcess": true,
-            "redirectOutput": true,
-            "showReturnValue": true,
-            "purpose": ["debug-in-terminal"]
+            "stopOnEntry": false
         },
         {
-            "name": "Debug with Pytest",
+            "name": "Python: Debug Tests",
             "type": "python",
             "request": "launch",
-            "module": "pytest",
+            "module": "unittest",
             "args": [
-                "${workspaceFolder}",
-                "-v",
-                "-s"
+                "discover",
+                "-s",
+                "tests",
+                "-p",
+                "test_*.py",
+                "-v"
             ],
             "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}",
             "envFile": "${workspaceFolder}/.env",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}",
-                "PYTHONUNBUFFERED": "1"
-            },
-            "stopOnEntry": false,
+            "cwd": "${workspaceFolder}",
             "justMyCode": false,
-            "subProcess": true,
-            "redirectOutput": true,
-            "showReturnValue": true,
-            "purpose": ["debug-test"]
+            "stopOnEntry": false
         },
         {
-            "name": "Debug gmail_fetcher.py (Test Mode - 1 hour)",
+            "name": "Python: Debug Current Test File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/gmail_fetcher.py",
+            "module": "unittest",
             "args": [
-                "--base-url", "10.1.1.247:11434",
-                "--hours", "1"
+                "${relativeFileDirname}.${fileBasenameNoExtension}"
             ],
             "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}",
             "envFile": "${workspaceFolder}/.env",
-            "env": {
-                "PYTHONPATH": "${workspaceFolder}",
-                "PYTHONUNBUFFERED": "1"
-            },
-            "stopOnEntry": false,
+            "cwd": "${workspaceFolder}",
             "justMyCode": false,
-            "subProcess": true,
-            "redirectOutput": true,
-            "showReturnValue": true,
-            "purpose": ["debug-in-terminal"]
-        },
-        {
-            "name": "Attach to Remote Process",
-            "type": "python",
-            "request": "attach",
-            "connect": {
-                "host": "localhost",
-                "port": 5678
-            },
-            "pathMappings": [
-                {
-                    "localRoot": "${workspaceFolder}",
-                    "remoteRoot": "/app"
-                }
-            ],
-            "justMyCode": false
+            "stopOnEntry": false
         }
     ]
 }
