--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,27 +1,79 @@
 {
-    "python.defaultInterpreterPath": "./venv/bin/python",
-    "python.envFile": "${workspaceFolder}/.env",
-    "python.terminal.activateEnvironment": true,
-    "python.testing.pytestEnabled": true,
-    "python.testing.unittestEnabled": false,
-    "python.testing.pytestArgs": [
-        "."
+    "python.defaultInterpreterPath": "${workspaceFolder}/venv/bin/python",
+    "python.analysis.extraPaths": [
+        "./",
+        "./services",
+        "./models",
+        "./email_providers",
+        "./migrations",
+        "./label_consolidation"
     ],
+    "python.analysis.autoImportCompletions": true,
+    "python.analysis.typeCheckingMode": "basic",
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
+    "python.linting.mypyEnabled": false,
     "python.formatting.provider": "black",
-    "python.analysis.autoImportCompletions": true,
-    "python.analysis.typeCheckingMode": "basic",
+    "python.formatting.blackArgs": [
+        "--line-length=88"
+    ],
+    "python.sortImports.args": [
+        "--profile=black"
+    ],
+    "python.testing.unittestEnabled": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./tests",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.pytestEnabled": false,
     "files.exclude": {
         "**/__pycache__": true,
         "**/*.pyc": true,
-        "**/logdir": true,
-        "**/.env": false
+        "**/.pytest_cache": true,
+        "**/cat_emails.egg-info": true,
+        "**/logdir": true
     },
-    "debug.console.fontSize": 14,
-    "debug.console.fontFamily": "Consolas, 'Courier New', monospace",
-    "debug.inlineValues": true,
-    "debug.showBreakpointsInOverviewRuler": true,
-    "debug.allowBreakpointsEverywhere": true
+    "editor.rulers": [
+        88
+    ],
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": "explicit"
+    },
+    "files.associations": {
+        "*.py": "python",
+        "Dockerfile*": "dockerfile",
+        "Makefile*": "makefile"
+    },
+    "python.envFile": "${workspaceFolder}/.env",
+    "python.terminal.activateEnvironment": true,
+    "python.analysis.diagnosticMode": "workspace",
+    "python.analysis.autoSearchPaths": true,
+    "python.analysis.completeFunctionParens": true,
+    "emmet.includeLanguages": {
+        "jinja2": "html"
+    },
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        }
+    },
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
+    "[css]": {
+        "editor.defaultFormatter": "vscode.css-language-features"
+    },
+    "[javascript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    },
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    }
 }
