FIX working with requestyai and vertex google gemini 2.5 flash

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,23 @@
 # Gmail Categorizer Environment Variables
 
 # Gmail credentials
+# Use a Gmail App Password (not your regular Gmail password).
+# - Enable 2-Step Verification, then create an App Password at: https://myaccount.google.com/apppasswords
+# - The App Password is 16 characters. Do NOT include spaces. If Google shows it with spaces, paste it without spaces.
 GMAIL_EMAIL=your-email@gmail.com
 GMAIL_PASSWORD=your-app-password
 
 # Control API credentials
 CONTROL_API_TOKEN=your-api-token
+
+# RequestYAI/OpenAI-compatible LLM settings
+# Provide the full OpenAI-compatible API root (often includes version path).
+# Example (RequestYAI): https://api.requesty.ai/openai/v1
+REQUESTYAI_BASE_URL=https://api.requesty.ai/openai/v1
+REQUESTYAI_API_KEY=your-requestyai-api-key
+# Legacy names also supported for compatibility:
+REQUESTY_API_URL=https://api.requesty.ai/openai/v1
+REQUESTY_API_KEY=your-requestyai-api-key
 
 # Optional settings
 HOURS=2  # Number of hours to look back for emails
@@ -24,3 +36,8 @@ SMTP_PASSWORD=your-smtp-password
 ENABLE_SUMMARIES=true  # Set to false to disable summary reports
 SUMMARY_RECIPIENT_EMAIL=your-email@gmail.com  # Who receives the summary reports
 
+# Database configuration
+# Path to the SQLite database file used by the app.
+# - For local runs: can be relative (default below)
+# - For Docker: set to an absolute path inside the container (e.g., /app/email_summaries/summaries.db)
+DATABASE_PATH=./email_summaries/summaries.db
