--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ scipy>=1.7.0
 sqlalchemy>=2.0.0
 alembic>=1.13.0
 
+# Ensure explicit websockets support in case environment ignores uvicorn extras
+websockets>=11.0.0
+
 # Email summary and visualization dependencies
 pytz>=2023.3
 jinja2>=3.1.2
@@ -22,7 +25,7 @@ seaborn>=0.12.0
 
 # API dependencies
 fastapi>=0.104.0
-uvicorn>=0.24.0
+uvicorn[standard]>=0.24.0
 
 # Optional email provider dependencies
 # Uncomment the providers you want to use:
