feat(storage): add remote SQLite helper for ell storage
- Introduce remote_sqlite_helper module to manage remote SQLite DB access
- Download remote SQLite DB if SQLITE_URL is set, fallback to local path
- Update ell.init() calls to use get_ell_store_path() for flexible storage
- Add SQLITE_URL config to .env.example
- Modify email_scanner_consumer, gmail_fetcher, gmail_fetcher_orig, and example to use new helper

This enables ell to use a remote SQLite database transparently, improving flexibility for deployment environments.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,9 @@ CONTROL_API_TOKEN=your-api-token
 # Optional settings
 HOURS=2  # Number of hours to look back for emails
 
+# Remote SQLite database URL (for ell-ai storage)
+# Format: http://your-server.com/path/to/database.db or https://your-server.com/path/to/database.db
+SQLITE_URL=
+
 # Note: Replace the values above with your actual Gmail credentials and other settings
 # Do not commit the actual .env file with real credentials to version control
