refactor(gmail_fetcher): make argument parsing conditional to support module import
- Moved argparse argument parsing inside a __main__ check
- Added default args object when imported as a module to avoid argparse errors
- This allows gmail_fetcher.py to be imported without running argument parsing
- Updated Dockerfile.service to copy new dependencies credentials_service.py and remote_sqlite_helper.py

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/Dockerfile.service
+++ b/Dockerfile.service
@@ -17,6 +17,8 @@ RUN pip install -U "ell-ai[all]"
 COPY gmail_fetcher.py .
 COPY gmail_fetcher_service.py .
 COPY domain_service.py .
+COPY credentials_service.py .
+COPY remote_sqlite_helper.py .
 COPY models/ ./models/
 
 # Set environment variables
