feat(logging): Add LogsCollectorService to send logs to external API
- Introduced LogsCollectorService for sending logs to LOGS_COLLECTOR_API endpoint
- Added integration in gmail_fetcher, email_processor_service, and email_summary_service to send structured logs
- Updated .env.example with configuration for logs collector API and token
- Enables centralized log collection for email processing application

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,9 @@ SUMMARY_RECIPIENT_EMAIL=your-email@gmail.com  # Who receives the summary reports
 # - For local runs: can be relative (default below)
 # - For Docker: set to an absolute path inside the container (e.g., /app/email_summaries/summaries.db)
 DATABASE_PATH=./email_summaries/summaries.db
+
+# Logs Collector API configuration
+# URL of the logs collector API endpoint
+LOGS_COLLECTOR_API=https://api.example.com/logs
+# Optional authentication token for the logs collector API
+LOGS_COLLECTOR_API_TOKEN=your-logs-api-token
