test(logs-collector-service): add comprehensive unit tests for LogsCollectorService
- Added a new test file 'test_logs_collector_service.py' with 194 lines of unit tests
- Tested initialization with and without configuration and environment variables
- Verified log sending behavior including success, network error, timeout, and bulk sends
- Included tests for specific log types like processing run and email processing logs
- Updated Dockerfile.test CMD to correctly discover test files in root directory

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -17,5 +17,5 @@ RUN pip install -e .
 # Copy source code and tests
 COPY . .
 
-# Run the tests
-CMD ["python", "-m", "unittest", "discover", "-v", "tests"]
+# Run the tests (test files are in root directory, not tests/)
+CMD ["python", "-m", "unittest", "discover", "-s", ".", "-p", "test*.py", "-v"]
