--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ websockets>=11.0.0
 
 # Testing dependencies
 pytest>=7.0.0
+faker>=20.0.0
 
 # Email summary and visualization dependencies
 pytz>=2023.3
