feat(database): add MySQL repository implementation and docs
- Introduced MySQLRepository for MySQL database support using SQLAlchemy ORM
- Added detailed MySQL setup and migration documentation (docs/MYSQL_SETUP.md)
- Updated .env.example with MySQL configuration options
- Added necessary MySQL dependencies to requirements.txt (pymysql, cryptography)
- Updated repositories package init to include MySQLRepository

This enables using MySQL (local or cloud-hosted) as an alternative to SQLite for scalable, concurrent email data storage.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -37,10 +37,30 @@ ENABLE_SUMMARIES=true  # Set to false to disable summary reports
 SUMMARY_RECIPIENT_EMAIL=your-email@gmail.com  # Who receives the summary reports
 
 # Database configuration
+# Choose ONE of the following database configurations:
+
+# Option 1: SQLite (local file-based database)
 # Path to the SQLite database file used by the app.
 # - For local runs: can be relative (default below)
 # - For Docker: set to an absolute path inside the container (e.g., /app/email_summaries/summaries.db)
 DATABASE_PATH=./email_summaries/summaries.db
+
+# Option 2: MySQL (local or cloud-hosted)
+# Individual connection parameters (recommended for clarity)
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_DATABASE=cat_emails
+MYSQL_USER=cat_emails_user
+MYSQL_PASSWORD=your-mysql-password
+
+# OR use a full MySQL connection string:
+# MYSQL_URL=mysql+pymysql://user:password@host:port/database
+# DATABASE_URL=mysql+pymysql://user:password@host:port/database
+
+# MySQL connection pool settings (optional, defaults shown)
+# MYSQL_POOL_SIZE=5
+# MYSQL_MAX_OVERFLOW=10
+# MYSQL_POOL_RECYCLE=3600
 
 # Logs Collector API configuration
 # URL of the logs collector API endpoint
