--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,10 @@ scipy>=1.7.0
 sqlalchemy>=2.0.0
 alembic>=1.13.0
 
+# MySQL database support
+pymysql>=1.1.0
+cryptography>=41.0.0  # Required by PyMySQL for secure connections
+
 # Ensure explicit websockets support in case environment ignores uvicorn extras
 websockets>=11.0.0
 
