feat(settings): add auto-detect for MySQL or SQLite repository in SettingsService
- SettingsService now auto-selects MySQLRepository if credentials are available
- Falls back to SQLAlchemyRepository (SQLite) if no MySQL config detected
- MySQLRepository attempts connection using env vars if no explicit creds
- Dockerfile.api updated to copy all necessary source directories
- Improves flexibility and configuration convenience for database usage

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -15,8 +15,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy all necessary Python files
 COPY api_service.py .
 COPY send_emails.py .
+COPY domain_service.py .
+COPY gmail_fetcher.py .
 COPY models/ ./models/
 COPY services/ ./services/
+COPY repositories/ ./repositories/
+COPY clients/ ./clients/
+COPY utils/ ./utils/
 COPY email_providers/ ./email_providers/
 COPY templates/ ./templates/
 
