--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -2,8 +2,8 @@ name: Renovate
 
 on:
   schedule:
-    # Run every day at 2:00 AM UTC
-    - cron: '0 2 * * *'
+    # Run every day at 6:00 PM ET (11:00 PM UTC)
+    - cron: '0 23 * * *'
   workflow_dispatch:
     inputs:
       dry_run:
