feat(mysql_repository): add MySQL migration to add audit count columns
Added new MySQL-specific migration script to add missing audit count columns
(emails_reviewed, emails_tagged, emails_deleted) to the processing_runs table.
Updated MySQLRepository initialization to run this migration after table creation
for runtime schema consistency and to fix insertion errors related to missing columns.
Dockerfile updated to copy migration scripts for deployment.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -17,6 +17,7 @@ COPY api_service.py .
 COPY send_emails.py .
 COPY domain_service.py .
 COPY gmail_fetcher.py .
+COPY constants.py .
 COPY models/ ./models/
 COPY services/ ./services/
 COPY repositories/ ./repositories/
@@ -24,6 +25,7 @@ COPY clients/ ./clients/
 COPY utils/ ./utils/
 COPY email_providers/ ./email_providers/
 COPY templates/ ./templates/
+COPY migrations/ ./migrations/
 
 # Set environment variables
 ENV API_HOST="0.0.0.0"
