fix(docker): fix Dockerfile usage and MySQL connection string
Updated docker-compose.yml and docker-compose.test.yml to use the correct Dockerfile, standardizing on 'Dockerfile' instead of 'Dockerfile.api' and 'Dockerfile.integration-test'.

Modified docker-entrypoint.sh to add MySQL connection parameters `allowPublicKeyRetrieval=true` and `useSSL=false` for compatibility with MySQL 8.0 authentication.

Added a pytest command for integration tests in docker-compose.test.yml to run specific tests during integration testing.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -21,7 +21,7 @@ services:
   integration-test:
     build:
       context: .
-      dockerfile: Dockerfile.integration-test
+      dockerfile: Dockerfile
     container_name: cat-emails-integration-test
     environment:
       - MYSQL_HOST=mysql-test
@@ -32,3 +32,4 @@ services:
     depends_on:
       mysql-test:
         condition: service_healthy
+    command: ["python", "-m", "pytest", "tests/test_pending_rollback_integration.py", "-v"]
