refactor(config): rename CONTROL_API_TOKEN to CONTROL_TOKEN across configs and code
- Changed environment variable CONTROL_API_TOKEN to CONTROL_TOKEN in .env-t, .env.example, and all configuration files.
- Updated Makefile, Makefile-t, docker-compose.yml to use CONTROL_TOKEN instead of CONTROL_API_TOKEN.
- Updated code in api_service.py, domain_service.py, gmail_fetcher.py, services/email_processing_config.py, and test_email_processor_integration.py to use CONTROL_TOKEN.
- Updated documentation files to reflect the new environment variable name.

This standardizes the control API token environment variable naming to CONTROL_TOKEN for consistency.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/Makefile-t
+++ b/Makefile-t
@@ -6,9 +6,9 @@ endif
 
 # Validate required environment variables
 validate-env:
-	@if [ -z "$(GMAIL_EMAIL)" ] || [ -z "$(GMAIL_PASSWORD)" ] || [ -z "$(CONTROL_API_TOKEN)" ]; then \
+	@if [ -z "$(GMAIL_EMAIL)" ] || [ -z "$(GMAIL_PASSWORD)" ] || [ -z "$(CONTROL_TOKEN)" ]; then \
 		echo "Error: Required environment variables are missing. Please set them in .env file:"; \
-		echo "GMAIL_EMAIL, GMAIL_PASSWORD, and CONTROL_API_TOKEN"; \
+		echo "GMAIL_EMAIL, GMAIL_PASSWORD, and CONTROL_TOKEN"; \
 		exit 1; \
 	fi
 
@@ -24,15 +24,15 @@ build:
 
 # Run the container with environment variables
 run: validate-env
-	@if [ -z "$(GMAIL_EMAIL)" ] || [ -z "$(GMAIL_PASSWORD)" ] || [ -z "$(CONTROL_API_TOKEN)" ]; then \
+	@if [ -z "$(GMAIL_EMAIL)" ] || [ -z "$(GMAIL_PASSWORD)" ] || [ -z "$(CONTROL_TOKEN)" ]; then \
 		echo "Error: Required environment variables are missing. Please set them in .env file:"; \
-		echo "GMAIL_EMAIL, GMAIL_PASSWORD, and CONTROL_API_TOKEN"; \
+		echo "GMAIL_EMAIL, GMAIL_PASSWORD, and CONTROL_TOKEN"; \
 		exit 1; \
 	fi
 	docker run --rm \
 		-e GMAIL_EMAIL="$(GMAIL_EMAIL)" \
 		-e GMAIL_PASSWORD="$(GMAIL_PASSWORD)" \
-		-e CONTROL_API_TOKEN="$(CONTROL_API_TOKEN)" \
+		-e CONTROL_TOKEN="$(CONTROL_TOKEN)" \
 		$(IMAGE_NAME) \
 		--hours $(or $(HOURS),2)
 
