--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - MAILTRAP_API_TOKEN=${MAILTRAP_API_TOKEN:-}
       - REQUESTYAI_API_KEY=${REQUESTYAI_API_KEY:-}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-}
-      - CONTROL_API_TOKEN=${CONTROL_API_TOKEN:-}
+      - CONTROL_TOKEN=${CONTROL_TOKEN:-}
       - MYSQL_HOST=mysql
       - MYSQL_PORT=3306
       - MYSQL_DATABASE=${MYSQL_DATABASE:-cat_emails}
