--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -33,3 +33,19 @@ services:
       mysql-test:
         condition: service_healthy
     command: ["python", "-m", "pytest", "tests/test_pending_rollback_integration.py", "-v"]
+
+  processing-run-columns-test:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: cat-emails-processing-run-columns-test
+    environment:
+      - MYSQL_HOST=mysql-test
+      - MYSQL_PORT=3306
+      - MYSQL_DATABASE=cat_emails_test
+      - MYSQL_USER=cat_emails
+      - MYSQL_PASSWORD=cat_emails_password
+    depends_on:
+      mysql-test:
+        condition: service_healthy
+    command: ["python", "-m", "pytest", "tests/test_processing_run_columns_integration.py", "-v"]
