--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,8 @@ matplotlib>=3.7.0
 seaborn>=0.12.0
 
 # API dependencies
-fastapi>=0.104.0
+# Pin FastAPI to avoid _compat module incompatibility with pydantic 2.9.2
+fastapi>=0.104.0,<0.115.0
 uvicorn[standard]>=0.24.0
 
 # Optional email provider dependencies
