feat(email_accounts): add missing OAuth columns and index with integration tests
- Added Flyway migration (V7) to fix missing OAuth-related columns in email_accounts table
- Columns added with conditional checks to avoid duplicates
- Created integration test suite verifying presence and functionality of new columns
- Updated docker-compose.test.yml to include OAuth columns integration test

This addresses the production failure caused by missing 'auth_method' column and ensures OAuth support fields are properly added and validated.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -49,3 +49,19 @@ services:
       mysql-test:
         condition: service_healthy
     command: ["python", "-m", "pytest", "tests/test_processing_run_columns_integration.py", "-v"]
+
+  oauth-columns-test:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: cat-emails-oauth-columns-test
+    environment:
+      - MYSQL_HOST=mysql-test
+      - MYSQL_PORT=3306
+      - MYSQL_DATABASE=cat_emails_test
+      - MYSQL_USER=cat_emails
+      - MYSQL_PASSWORD=cat_emails_password
+    depends_on:
+      mysql-test:
+        condition: service_healthy
+    command: ["python", "-m", "pytest", "tests/test_email_account_oauth_columns_integration.py", "-v"]
